@@ -1,4 +1,7 @@
 1.3.2 (Pending)
+* Added: --prereqs command line argument to show all tasks and their
+dependencies. You can also follow with regular expression to narrow down the
+list of tasks.
 * Changed: Upgraded to Rubyforge 1.0.0.
 * Changed: BUILDR-86 Use newest versions of net-ssh and net-sftp gems.
 * Changed: BUILDR-88 Test classes/resources should come before compile
